; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/nat64/extr_nat64clat_control.c_nat64clat_find.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/nat64/extr_nat64clat_control.c_nat64clat_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nat64clat_cfg = type { i32 }
%struct.namedobj_instance = type { i32 }

@IPFW_TLV_NAT64CLAT_NAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.nat64clat_cfg* (%struct.namedobj_instance*, i8*, i32)* @nat64clat_find to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.nat64clat_cfg* @nat64clat_find(%struct.namedobj_instance* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.namedobj_instance*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.nat64clat_cfg*, align 8
  store %struct.namedobj_instance* %0, %struct.namedobj_instance** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.namedobj_instance*, %struct.namedobj_instance** %4, align 8
  %9 = load i32, i32* %6, align 4
  %10 = load i32, i32* @IPFW_TLV_NAT64CLAT_NAME, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = call i64 @ipfw_objhash_lookup_name_type(%struct.namedobj_instance* %8, i32 %9, i32 %10, i8* %11)
  %13 = inttoptr i64 %12 to %struct.nat64clat_cfg*
  store %struct.nat64clat_cfg* %13, %struct.nat64clat_cfg** %7, align 8
  %14 = load %struct.nat64clat_cfg*, %struct.nat64clat_cfg** %7, align 8
  ret %struct.nat64clat_cfg* %14
}

declare dso_local i64 @ipfw_objhash_lookup_name_type(%struct.namedobj_instance*, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
